...
                name="cpf"
                label="CPF"
                maskFunction={formatCPF}
                keyboardType="number-pad"
                onEndEditing={handleVerifyBiometrics}
                onSubmitEditing={handleVerifyBiometrics}
                testID="cpf.input"
              />
              <ControlledInput
                secureTextEntry
                errors={errors.password}
                control={control}
                name="password"
                label="Senha"
                onSubmitEditing={handleSubmit(onSubmit)}
                testID="password.input"
              />
            </S.BoxWithGap>
            <S.BoxCentered>
              <Button
                label="Entrar"
                icon="signout"
                loading={loading}
                onPress={handleSubmit(onSubmit)}
                testID="submit.button"
              />
            </S.BoxCentered>
          </S.Box>
        </PageContent>
      </ScrollView>
    </KeyboardAvoidingView>
...
