...
    return () => {
      listener.remove()
    }
  }, [])

  return (
    <PageContent testID="product-list.page">
      <TouchableWithoutFeedback onPress={Keyboard.dismiss}>
        <S.Container>
          <HeaderList />
          <Filters
            orderBy={orderBy}
            search={search}
...
