...

  return (
    <ToastContext.Provider value={{show: showToast}}>
      {children}
      {toast && (
        <Animated.View
          testID="toast"
          style={[styles, {transform: [{translateY}]}]}>
          <Typography testID="toast.message" color={textColor}>
            {toast.message}
          </Typography>
        </Animated.View>
      )}
    </ToastContext.Provider>
  )
...
